# robot_ws

./: .gitignore  README.md  main.ino  main.py  pyproject.toml  start_system.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/csm/include/csm/: algos.h  restrict.h
install/csm/share/csm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gantry_commander/lib/gantry_commander/: go_to_point  serial_bridge
install/gantry_commander/share/gantry_commander/: controllers.yaml  gantry.urdf.xml  launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gantry_moveit_config/share/gantry_moveit_config/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ired_bringup/include/: modbus_rtu.hpp
install/ired_bringup/include/ired_bringup/: forward_kinematics.hpp  inverse_kinematics.hpp  ired_controller.hpp  ired_controller_define.hpp  odom.hpp
install/ired_bringup/lib/ired_bringup/: forward_kinematics_node  imu_node  inverse_kinematics_node  iredcr_modbus_node  odom_node
install/ired_bringup/share/ired_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh
install/ired_msgs/share/ired_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh
install/ired_navigation/share/ired_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ired_rviz/share/ired_rviz/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/ired_teleop/lib/ired_teleop/: teleop_keyboard
install/ired_teleop/share/ired_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros2_laser_scan_matcher/lib/ros2_laser_scan_matcher/: laser_scan_matcher
install/ros2_laser_scan_matcher/share/ros2_laser_scan_matcher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/gantry_bringup/: package.xml  setup.cfg  setup.py
src/gantry_bringup/launch/: bringup.launch.py
src/gantry_commander/: gantry.urdf.xml  setup.cfg  setup.py
src/gantry_commander/gantry_commander/: serial_bridge.py  serial_bridge_cli.py  serial_bridge_new.py  testbit.py
src/gantry_commander/launch/: launch.py  view_robot.launch.py
src/gantry_commander/www/: index.html
src/gantry_moveit_config/: .setup_assistant  yolo_to_moveit_node.py
src/gantry_moveit_config/config/: gantry_robot.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/gantry_moveit_config/launch/: demo.launch.py  move_group.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/csm/gsl_eigen/: gsl_eigen.h
src/log/: latest_build
src/robot/: .gitmodules  gripper.py
src/robot/ired_bringup/: CMakeLists.txt
src/robot/ired_bringup/include/: modbus_rtu.hpp
src/robot/ired_bringup/include/ired_bringup/: forward_kinematics.hpp  imu.hpp  inverse_kinematics.hpp  ired_controller.hpp  ired_controller_define.hpp  odom.hpp
src/robot/ired_bringup/launch/: bringup.launch.py
src/robot/ired_bringup/param/: ired.yaml  laser_config.yaml  laser_scan_matcher.yaml
src/robot/ired_bringup/src/: forward_kinematics.cpp  imu.cpp  inverse_kinematics.cpp  ired_controller.cpp  modbus_rtu.cpp  odom.cpp
src/robot/ired_bringup/urdf/: ired.urdf.xacro
src/robot/ired_msgs/: CMakeLists.txt
src/robot/ired_msgs/msg/: MotorSpeed.msg
src/robot/ired_navigation/: .gitignore  CMakeLists.txt  package.xml
src/robot/ired_navigation/config/: ired_rplidar_2d.lua
src/robot/ired_navigation/launch/: navigation.launch.py  occupancy_grid.launch.py  save_map.launch.py  slam.launch.py
src/robot/ired_navigation/maps/: map.pgm  map.yaml
src/robot/ired_navigation/param/: navigation.yaml
src/robot/ired_rviz/: CMakeLists.txt  package.xml
src/robot/ired_rviz/launch/: navigation.launch.py  slam.launch.py
src/robot/ired_rviz/rviz/: bringup.rviz  navi.rviz  robot_urdf.rviz  slam.rviz
src/robot/ired_teleop/: .gitignore  package.xml  setup.cfg  setup.py
src/robot/ired_teleop/ired_teleop/script/: teleop_keyboard.py
src/robot/ros2_laser_scan_matcher/: CMakeLists.txt
src/robot/ros2_laser_scan_matcher/launch/: laser_scan_matcher.launch.py
src/robot/ros2_laser_scan_matcher/param/: laser_scan_matcher.yaml
src/yolo_realsense/: capture_image.py  package.xml  setup.py
src/yolo_realsense/yolo_realsense/: calibration_collector.py  calibration_solver.py  gantry.urdf.xml  gripper.py  yolo_distance_node.py  yolo_node.py  yolo_node_ori.py  yolo_to_moveit_node.py
(+393 files in other folders)
