<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ired_teleop</name>
  <version>2.0.1</version>
  <description>
    iRED Teleop : This package is used for command to move the iRED robot.
  </description>
  <maintainer email="t.thepsit@gmail.com">T. Thepsit</maintainer>
  <author email="aimslabkmitl@gmail.com">AIMs Lab, KMITL</author>
  <license>Apache-2.0</license>
  <url type="website">https://aimslab.kmitl.ac.th</url>
  <url type="repository">https://gitlab.raikmitl.com/ired/ired_teleop.git</url>
  <license>Apache 2.0</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
